[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/UI/background 2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TopUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BottomUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Sinker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/IceHolder.gd" type="Script" id=6]
[ext_resource path="res://Scripts/LockHolder.gd" type="Script" id=7]
[ext_resource path="res://Scripts/ConcreteHolder.gd" type="Script" id=8]
[ext_resource path="res://Scripts/SlimeHolder.gd" type="Script" id=9]
[ext_resource path="res://Scenes/QuitMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/GoalHolder.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Goal.tscn" type="PackedScene" id=12]
[ext_resource path="res://Art/Obstacles/Ice.png" type="Texture" id=13]
[ext_resource path="res://Scenes/GameWinScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Pause.tscn" type="PackedScene" id=15]

[node name="GameWindow" type="Node2D" index="0"]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
stretch_mode = 0

[node name="TopUI" parent="." index="1" instance=ExtResource( 2 )]

margin_right = 576.0
margin_bottom = 192.0

[node name="BottomUI" parent="." index="2" instance=ExtResource( 3 )]

margin_bottom = 1024.0
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[node name="Grid" type="Node2D" parent="." index="3"]

editor/display_folded = true
script = ExtResource( 4 )
width = 4
height = 4
x_start = 64
y_start = 800
offset = 64
y_offset = 2
empty_spaces = null
ice_spaces = null
lock_spaces = null
concrete_spaces = null
slime_spaces = null
preset_spaces = null
current_counter_value = 30
is_moves = true
sinker_piece = ExtResource( 5 )
sinkers_in_scene = false
max_sinkers = 0
max_score = 5000
piece_value = 10

[node name="Timer" type="Timer" parent="Grid" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="IceHolder" type="Node2D" parent="." index="4"]

script = ExtResource( 6 )
value = "Ice"

[node name="LockHolder" type="Node2D" parent="." index="5"]

script = ExtResource( 7 )

[node name="ConcreteHolder" type="Node2D" parent="." index="6"]

script = ExtResource( 8 )

[node name="SlimeHolder" type="Node2D" parent="." index="7"]

script = ExtResource( 9 )

[node name="DestroyTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="CollapseTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="RefillTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="AudioPlayer" type="AudioStreamPlayer" parent="." index="11"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="CanvasLayer" parent="." index="12" instance=ExtResource( 10 )]

[node name="GoalHolder" type="Node" parent="." index="13"]

script = ExtResource( 11 )

[node name="Goal" parent="GoalHolder" index="0" instance=ExtResource( 12 )]

goal_texture = ExtResource( 13 )
max_needed = 22
goal_string = "Ice"

[node name="GameWinScreen" parent="." index="14" instance=ExtResource( 14 )]

[node name="Pause" parent="." index="15" instance=ExtResource( 15 )]

[connection signal="pause_game" from="BottomUI" to="Pause" method="_on_BottomUI_pause_game"]

[connection signal="check_goal" from="Grid" to="GoalHolder" method="_on_Grid_check_goal"]

[connection signal="check_goal" from="Grid" to="TopUI" method="_on_Grid_check_goal"]

[connection signal="create_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_create_concrete"]

[connection signal="create_ice" from="Grid" to="IceHolder" method="_on_Grid_create_ice"]

[connection signal="create_lock" from="Grid" to="LockHolder" method="_on_Grid_create_lock"]

[connection signal="create_slime" from="Grid" to="SlimeHolder" method="_on_Grid_create_slime"]

[connection signal="damage_concrete" from="Grid" to="ConcreteHolder" method="_on_Grid_damage_concrete"]

[connection signal="damage_ice" from="Grid" to="IceHolder" method="_on_Grid_damage_ice"]

[connection signal="damage_lock" from="Grid" to="LockHolder" method="_on_Grid_damage_lock"]

[connection signal="damage_slime" from="Grid" to="SlimeHolder" method="_on_Grid_damage_slime"]

[connection signal="game_over" from="Grid" to="CanvasLayer" method="_on_Grid_game_over"]

[connection signal="setup_max_score" from="Grid" to="TopUI" method="_on_Grid_setup_max_score"]

[connection signal="update_counter" from="Grid" to="TopUI" method="_on_Grid_update_counter"]

[connection signal="update_score" from="Grid" to="TopUI" method="_on_Grid_update_score"]

[connection signal="timeout" from="Grid/Timer" to="Grid" method="_on_Timer_timeout"]

[connection signal="break_ice" from="IceHolder" to="GoalHolder" method="_on_IceHolder_break_ice"]

[connection signal="break_ice" from="IceHolder" to="TopUI" method="_on_IceHolder_break_ice"]

[connection signal="remove_lock" from="LockHolder" to="Grid" method="_on_LockHolder_remove_lock"]

[connection signal="remove_concrete" from="ConcreteHolder" to="Grid" method="_on_ConcreteHolder_remove_concrete"]

[connection signal="remove_slime" from="SlimeHolder" to="Grid" method="_on_SlimeHolder_remove_slime"]

[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_DestroyTimer_timeout"]

[connection signal="timeout" from="CollapseTimer" to="Grid" method="_on_CollapseTimer_timeout"]

[connection signal="timeout" from="RefillTimer" to="Grid" method="_on_RefillTimer_timeout"]

[connection signal="create_goal" from="GoalHolder" to="TopUI" method="_on_GoalHolder_create_goal"]

[connection signal="game_won" from="GoalHolder" to="GameWinScreen" method="_on_GoalHolder_game_won"]

[connection signal="game_won" from="GoalHolder" to="Grid" method="_on_GoalHolder_game_won"]


